[package]
name = "quixutils"
version = "0.11.0"
authors = ["Prasanna Loganathar <pvl@prasannavl.com>"]
edition = "2018"
description = "Common helpers and utils"
homepage = "https://github.com/quixon-labs/quixutils-rs"
repository = "https://github.com/quixon-labs/quixutils-rs"
readme = "README.md"
keywords = [ "bootstrap", "helpers", "utils" ]
categories = [ "rust-patterns" ]
license = "Apache-2.0"

[dependencies]
log = "0.4.6"
failure = "0.1.5"
futures-preview = { version = "0.3.0-alpha.14", features = ["compat"] }
serde = { version = "1.0.90", features = ["derive"] }
serde_json = "1.0.39"
lazy_static = "1.3.0"
chrono = "0.4.6"
rand = "0.6.5"
time = "0.1.42"
hyper = "0.12.27"
actix-web = { version = "1.0.0-beta.1", optional = true }
env_logger = "0.6.1"
tide = { version = "0.1.1", optional = true }
http = "0.1.17"
http-service = "0.1.5"
tokio = { version = "0.1.18" }
actix = { version = "0.8.1", optional = true }

[features]

default = []
# If same name as dependencies can be used, change this.
# https://github.com/rust-lang/cargo/issues/4911
actix_utils = ["actix", "actix-web"]
tide_utils = ["tide"]
