[package]
name = "quixutils"
version = "0.11.2"
authors = ["Prasanna Loganathar <pvl@prasannavl.com>"]
edition = "2018"
description = "Common helpers and utils"
homepage = "https://github.com/quixon-labs/quixutils-rs"
repository = "https://github.com/quixon-labs/quixutils-rs"
readme = "README.md"
keywords = [ "bootstrap", "helpers", "utils" ]
categories = [ "rust-patterns" ]
license = "Apache-2.0"

[dependencies]
# Add preview versions first so it's handy to change
actix-web = { version = "1.0.0-beta.5", optional = true }
futures-preview = { version = "0.3.0-alpha.16", features = ["compat"] }
# Add others which have extra opts
serde = { version = "1.0.91", features = ["derive"] }
tide = { version = "0.2.0", optional = true }
actix = { version = "0.8.2", optional = true }
# Usual deps
log = "0.4.6"
failure = "0.1.5"
serde_json = "1.0.39"
lazy_static = "1.3.0"
chrono = "0.4.6"
rand = "0.6.5"
time = "0.1.42"
hyper = "0.12.28"
env_logger = "0.6.1"
http = "0.1.17"
http-service = "0.2.0"
tokio = "0.1.18"

[features]

default = []
# If same name as dependencies can be used, change this.
# https://github.com/rust-lang/cargo/issues/4911
actix_utils = ["actix", "actix-web"]
tide_utils = ["tide"]
