[package]
name = "quixutils"
version = "0.13.2"
authors = ["Prasanna Loganathar <pvl@prasannavl.com>"]
edition = "2018"
description = "Common helpers and utils"
homepage = "https://github.com/quixon-labs/quixutils-rs"
repository = "https://github.com/quixon-labs/quixutils-rs"
readme = "README.md"
keywords = [ "bootstrap", "helpers", "utils" ]
categories = [ "rust-patterns" ]
license = "Apache-2.0"

[dependencies]
# Add preview versions first so it's handy to change
futures-preview = { version = "=0.3.0-alpha.19", features = ["async-await", "compat"], optional = true}
# Optional items next
tokio = { version = "0.1.22", optional = true }
# Usual deps
log = "0.4.8"
chrono = "0.4.9"
env_logger = "0.7.0"
anyhow = "1.0.11"

## Latest version removed bits
# serde = { version = "1.0.101", features = ["derive"] }
# actix-web = { version = "1.0.8", optional = true }
# tide = { version = "0.2.0", optional = true }
# actix = { version = "0.8.3", optional = true }
# http = { version = "0.1.18", optional = true }
# serde_json = "1.0.41"

[features]

default = []
unstable = []
# If same name as dependencies can be used, change this.
# https://github.com/rust-lang/cargo/issues/4911
# actix_utils = ["actix", "actix-web"]
# tide_utils = ["tide"]
tokio_utils = ["tokio", "futures-preview"]
